# annotate-video-with-multimodal-model

./: .gitignore  README.md  main.py  pyproject.toml
